--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,4 +46,14 @@ div.footer {
 	height: 100px;
 	background-color: #ffe6b3;
 	font-size:10px;
-}p
+}
+
+img.logo {
+	float:right;
+}
+
+img.robot {
+	margin-left:auto;
+	margin-right:auto;
+	display:block;
+}
