--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,9 +16,9 @@ div.all {
 div.header {
 	height: 200px;
 	background-color: #ffcccc;
-	color:black;
-	font-size:20px;
-	font-family:Arial;
+	color:blue;
+	font-size:23px;
+	font-family:Impact;
 }
 
 div.navbar {
