--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ div.header {
 	background-color: #ffcccc;
 	color:black;
 	font-size:20px;
-	font-family:Arial;
+	font-family:Times;
 }
 
 div.navbar {
@@ -45,7 +45,7 @@ div.sidebar {
 div.footer {
 	height: 100px;
 	background-color: #ffe6b3;
-	font-size:10px;
+	font-size:14px;
 }
 
 img.logo {
