--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,6 +40,7 @@ div.sidebar {
 	width: 25% !important;
 	float: left; /*Puts content and sidebar next to each other*/
 	background-color: #ccccff;
+	min-height: 186px;
 }
 
 div.footer {
