--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,15 +15,15 @@ div.all {
 
 div.header {
 	height: 200px;
-	background-color: #ffcccc;
-	color:blue;
-	font-size:23px;
+	background-color: #70A288;
+	color: #0D1344;
+	font-size:40px;
 	font-family:Impact;
 }
 
 div.navbar {
 	height: 30px;
-	background-color: #99dfff;
+	background-color: #70A288;
 }
 
 div.body {
@@ -33,18 +33,18 @@ div.body {
 div.content {
 	width: 75% !important;
 	float: left; /*Puts content and sidebar next to each other*/
-	background-color: #99ff99;
+	background-color: #70A288;
 }
 
 div.sidebar {
 	width: 25% !important;
 	float: left; /*Puts content and sidebar next to each other*/
-	background-color: #ccccff;
+	background-color: #70A288;
 }
 
 div.footer {
 	height: 100px;
-	background-color: #ffe6b3;
+	background-color: #70A288;
 	font-size:10px;
 }
 
@@ -56,4 +56,8 @@ img.robot {
 	margin-left:auto;
 	margin-right:auto;
 	display:block;
+}
+
+body {
+	background-color: #70A288; 
 }
